...
    <!-- External-app launching from card content (intent: / android-app: URLs) -->
    <string name="card_external_launch_denied_snackbar">Security: Card blocked from launching another app.\nIf you trust all cards and templates in your collection, this can be unblocked in the advanced settings</string>

    <!-- preferences.xml entries-->
    <string name="use_input_tag" maxLength="41">Type answer into the card</string>
    <string name="use_input_tag_summ">Use a text input box inside the card to type in the answer</string>
    <string name="card_zoom" maxLength="41">Card zoom</string>
    <string name="image_zoom" maxLength="41">Image zoom</string>
    <string name="gestures" maxLength="41">Enable gestures</string>
    <string name="gestures_summ">Assign gestures to actions such as answering and editing cards.</string>
    <string name="gestures_corner_touch" maxLength="41">9-point touch</string>
    <string name="gestures_corner_touch_summary">Allow touch gestures in screen corners</string>
    <string name="gestures_none" maxLength="41" comment="No gestures">None</string>
...
    <string name="sync_status_badge" maxLength="41">Display synchronization status</string>
    <string name="sync_status_badge_summ">Change the sync icon when changes can be uploaded</string>
    <string name="metered_sync_title" maxLength="41">Allow sync on metered connections</string>
    <string name="metered_sync_summary">If disabled, you will be warned if you try to sync on a metered connection</string>
    <string name="language" maxLength="41">Language</string>
    <string name="language_system">System language</string>
    <string name="notification_pref" maxLength="41">Notifications</string>
    <string name="notification_pref_title" maxLength="41">Notify when</string>
    <string name="never_notify">Never notify</string>
    <string name="notify_when_pending">Pending messages available</string>
    <string name="notification_minimum_cards_due" comment="Consider keeping the unbreakable space after the digit">More than %d&#160;cards due</string>
    <string name="notification_minimum_cards_due_vibrate" maxLength="41">Vibrate</string>
    <string name="notification_minimum_cards_due_blink" maxLength="41">Blink light</string>
...
