...
        <!-- This is ignored in the search as it opens a submenu. The submenu content is what should actually appear in search result. -->
        <Preference
            android:summary="@string/custom_buttons_summary"
            android:title="@string/custom_buttons"
            android:key="@string/custom_buttons_link_preference"
            android:fragment="com.ichi2.anki.preferences.CustomButtonsSettingsFragment"
            search:ignore="true"/>
        <ListPreference
            android:defaultValue="0"
            android:key="@string/fullscreen_mode_preference"
            android:entries="@array/full_screen_mode_labels"
            android:entryValues="@array/full_screen_mode_values"
            android:title="@string/fullscreen_review"
...
